<!--
 - strings.xml - english
 - Copyright (c) 2026. All rights reserved
-->
<resources>
    <string name="version_value" translatable="false">Version %1$s</string>
    <string name="title_quantity_value" translatable="false">%1$s - %2$d</string>
    <string name="progress_obtained_format">%1$s / %2$s</string>
    <!-- App -->
    <string name="app_name" translatable="false">My Album 2026</string>
    <string name="idle" translatable="false">idle</string>
    <string name="other" translatable="false">other</string>
    <string name="n_a" translatable="false">N/A</string>
    <!-- Talk -->
    <string name="back">Back</string>
    <!-- Internet Connection -->
    <string name="retry">Retry</string>
    <string name="title_retry_error_internet_text">Internet connection lost</string>
    <string name="subtitle_retry_error_internet_text">Connect to a network to continue browsing</string>
    <string name="loader_default_text">Loading…</string>
    <!-- Errors -->
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="timeout">Timeout</string>
    <string name="there_are_problems_with_the_servant_try_again_later">There are problems with the servant, try again later</string>
    <string name="please_try_again_later">At the moment we cannot perform this action, please try again later</string>
    <!-- Welcome -->
    <string name="start">Start</string>
    <string name="welcome_to_the_app_that_helps_you_get_organized_to_complete_your_2026_album_we_hope_you_achieve_your_goal_and_enjoy_the_experience_as_much_as_we_do">Welcome to the app that helps you get organized to complete your 2026 album. We hope you achieve your goal and enjoy the experience as much as we do</string>
    <!-- Cards -->
    <string name="cards_missing">Cards missing</string>
    <string name="missing">Missing</string>
    <string name="your_progress">Your progress</string>
    <string name="total_cards">Total cards</string>
    <string name="missing_cards">Missing cards</string>
    <string name="cards_obtained">Cards obtained</string>
    <string name="obtained">Obtained</string>
    <string name="my_collection_2626">My collection 2626</string>
    <string name="my_progress">My progress</string>
    <string name="enter_the_number_of_stamps_you_have">Enter the number of stamps you have</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="important">IMPORTANT</string>
    <string name="if_you_delete_your_app_you_will_lose_your_album_progress">If you delete your app, you will lose your album progress</string>
    <string name="share_with">Share my missing cards</string>
    <string name="no_missing_cards">Congratulations! You have no missing stickers</string>
    <string name="error_share_missing_cards">Error share missing cards</string>
    <!-- Update -->
    <string name="update_required_title">Update required</string>
    <string name="update_required_description">We have detected an outdated version. To continue enjoying all features and security improvements, you must update the application</string>
    <string name="update_button">Update</string>
    <!-- Cards -->
    <string name="general_search">General search</string>
    <string name="search_by_country">Search by country</string>
    <string name="country_obtained">Country obtained</string>
    <string name="county_missing">County missing</string>
    <string name="search_country">Search country or code</string>
    <string name="complete_cards">Complete cards</string>
    <string name="congratulations_you_completed_your_album">Congratulations, you completed your album</string>
    <string name="you_don_t_have_a_card_yet">You don\'t have a card yet</string>
    <string name="no_cards">No cards</string>
    <!-- Repeated -->
    <string name="cards_repeated">Cards repeated</string>
    <string name="share_with_repeated">Share my repeated cards</string>
    <string name="error_share_reapeated_cards">Error share repeated cards</string>
    <string name="no_repeated_cards">Congratulations! You have no repeated stickers</string>
    <string name="percentage_obtained">Percentage obtained</string>
    <string name="percentage_missing">Percentage missing</string>
    <!-- Qr -->
    <string name="home" translatable="false">Home</string>
    <string name="qr" translatable="false">Qr</string>
    <string name="scan_qr">Scan qr</string>
    <string name="show_qr">Show qr</string>
    <string name="scan_and_generate_qr">Scan and generate qr</string>
    <string name="your_repeat_qr_code">Your repeat qr code</string>
    <string name="ask_someone_to_scan_this_code_to_see_which_stamps_you_can_give_in_exchange">Ask someone to scan this code to see which stamps you can give in exchange</string>
    <string name="show_your_qr_for_your_repeated">Show your qr for your repeated</string>
    <string name="scan_the_qr_code_to_exchange">Scan the qr code to exchange</string>
    <string name="dashboard_overview">Dashboard Overview</string>
    <string name="total_cards_missing">Total cards missing</string>
    <string name="total_cards_repeated">Total cards repeated</string>
    <string name="search">Search</string>
    <string name="camera_permission_is_required_to_scan">Camera permission is required to scan</string>
    <string name="exchange_found">Exchange found</string>
    <string name="cards_that_are_useful_to_you">Cards that are useful to you: \n</string>
    <string name="total_cards_collected">Total cards collected</string>
</resources>
