<?xml version="1.0" encoding="utf-8"?><!--
 - fragment_container_qr.xml
 - Copyright (c) 2026. All rights reserved
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screenRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    tools:context=".presenter.ui.dashboard.qr.container_qr.ContainerQrFragment">

    <TextView
        android:id="@+id/versionTextView"
        style="@style/text_small.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="v1.0" />

    <TextView
        android:id="@+id/myCollectionTextView"
        style="@style/text_extra.bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:text="@string/my_collection_2626"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versionTextView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/qrMaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:backgroundTint="@color/md_theme_surface"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCollectionTextView"
        app:strokeColor="@color/border_color"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                style="@style/text_big.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scan_and_generate_qr" />

            <TextView
                style="@style/text_medium.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/show_your_qr_for_your_repeated" />

            <com.myalbum2026.mobile.presenter.widget.button.CustomButton
                android:id="@+id/generateQrCustomButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/show_qr"
                android:textSize="16sp"
                app:btnType="btn_primary" />

            <TextView
                style="@style/text_medium.bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/scan_the_qr_code_to_exchange" />

            <com.myalbum2026.mobile.presenter.widget.button.CustomButton
                android:id="@+id/scanQrCustomButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/scan_qr"
                android:textSize="16sp"
                app:btnType="btn_secondary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
