<?xml version="1.0" encoding="utf-8"?><!--
 - dialog_quantity.xml
 - Copyright (c) 2026. All rights reserved
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quantityRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_theme_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <TextView
        android:id="@+id/titleTxt"
        style="@style/text_big.bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Name" />

    <LinearLayout
        android:id="@+id/quantityLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_16"
        android:background="@drawable/bg_linear"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type">

        <ImageButton
            android:id="@+id/imgLess"
            style="@style/Ripple.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:longClickable="true"
            android:padding="@dimen/padding_16"
            app:srcCompat="@drawable/ic_minus"
            app:tint="@color/black_color" />

        <EditText
            android:id="@+id/quantityEdt"
            style="@style/EditText_Enable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:gravity="center"
            tools:ignore="LabelFor"
            tools:text="1" />

        <ImageButton
            android:id="@+id/imgPlus"
            style="@style/Ripple.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:longClickable="true"
            android:padding="@dimen/padding_16"
            app:srcCompat="@drawable/ic_add"
            app:tint="@color/black_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/text_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_the_number_of_stamps_you_have" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal">

        <com.myalbum2026.mobile.presenter.widget.button.CustomButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:btnType="btn_primary" />

        <com.myalbum2026.mobile.presenter.widget.button.CustomButton
            android:id="@+id/acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textSize="16sp"
            app:btnType="btn_secondary" />

    </LinearLayout>

</LinearLayout>
